<resources>
    <string name="app_name">Note</string>
    <string name="basmala">بسم الله الرحمن الرحيم</string>
    <string name="search_notes">Search notes..</string>
    <string name="add_new_note_button">Add new note button</string>
    <string name="note_title">Note Title</string>
    <string name="type_your_note_here">Type your note here...</string>
    <string name="note">note...</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick color</string>
    <string name="add_image">Add image</string>
    <string name="data_and_time">data and time</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_this_note">Delete this note</string>
    <string name="delete_note">Delete note</string>
    <string name="delete_note_caps">DELETE NOTE</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="delete_note_text">Delete note</string>
</resources>