<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addUrlDialog"
    android:layout_margin="@dimen/_10sdp"
    android:layout_gravity="center"
    android:background="@drawable/add_url_dialog_background">

    <ImageView
        android:id="@+id/addWebIcon"
        android:src="@drawable/add_internet_resource"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        app:tint="@android:color/black"
        android:layout_marginLeft="@dimen/_12sdp" />

    <TextView
        android:id="@+id/addWebText"
        android:text="@string/add_url"
        android:layout_width="0dp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-light"
        android:layout_marginStart="@dimen/_8sdp"
        android:textSize="@dimen/_14ssp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/addWebIcon"
        app:layout_constraintTop_toTopOf="@id/addWebIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/addWebIcon"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp" />

    <EditText
        android:id="@+id/addWebEditText"
        android:fontFamily="sans-serif-light"
        android:hint="@string/enter_url"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:background="@null"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/addWebIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:textSize="@dimen/_13sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginLeft="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:includeFontPadding="false"/>

    <TextView
        android:id="@+id/addTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_13sdp"
        android:text="@string/add"
        android:textColor="@color/colorAccent"
        android:fontFamily="sans-serif-light"
        android:padding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/addWebEditText"
        app:layout_constraintEnd_toEndOf="@id/addWebEditText"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/cancelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_13sdp"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:fontFamily="sans-serif-light"
        android:padding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/addWebEditText"
        app:layout_constraintEnd_toStartOf="@id/addTextView"
        app:layout_constraintBottom_toBottomOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>