<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/noteItemCard"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_10sdp"
    android:layout_margin="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageNote"
            android:adjustViewBounds="true"
            android:visibility="gone"
            app:riv_corner_radius_top_right="@dimen/_10sdp"
            app:riv_corner_radius_top_left="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/titleText"
            android:textSize="@dimen/_14ssp"
            android:text="@string/note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:includeFontPadding="false"/>

        <TextView
            android:id="@+id/noteText"
            android:maxHeight="@dimen/_250sdp"
            android:text="@string/note"
            android:textSize="@dimen/_12ssp"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"/>

        <TextView
            android:text="@string/data_and_time"
            android:id="@+id/textDataTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="@dimen/_7ssp"
            android:includeFontPadding="false"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif-light"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"/>


    </LinearLayout>

</androidx.cardview.widget.CardView>