<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.CreateNoteActivity"
    >
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:layout_marginBottom="50dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true">

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/ic_back"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/doneImageView"
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp"
        android:src="@drawable/ic_done"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="@dimen/_20sdp"/>


    <EditText
        android:id="@+id/inputTitleNote"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:autofillHints="@string/note_title"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/note_title"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageBack" />

    <TextView
        android:id="@+id/textDataTime"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="end"
        android:layout_marginEnd="@dimen/_18sdp"
        android:layout_marginStart="@dimen/_18ssp"
        android:textSize="@dimen/_7ssp"
        android:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputTitleNote"
        android:layout_marginRight="@dimen/_18sdp"
        android:layout_marginLeft="@dimen/_18ssp" />

    <ImageView
        android:id="@+id/imageNote"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        app:layout_goneMarginEnd="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_12sdp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/textDataTime"/>
    
    <ImageView
        android:id="@+id/deleteImage"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/ic_delete"
        android:background="@drawable/delete_background"
        app:tint="@android:color/white"
        android:padding="@dimen/_4sdp"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="@id/imageNote"
        app:layout_constraintTop_toTopOf="@id/imageNote"/>
    
    <LinearLayout
        android:id="@+id/layoutWebUrl"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:gravity="center_vertical"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/imageNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_12sdp"
        tools:ignore="UseCompoundDrawables">
        
        <TextView
            android:id="@+id/webUrlText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoLink="web"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="sans-serif-light"
            android:includeFontPadding="false"/>
        
        <ImageView
            android:id="@+id/deleteUrl"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_delete"
            app:tint="@android:color/holo_red_light"
            android:contentDescription="@string/app_name"/>

        
    </LinearLayout>


    <View
        android:id="@+id/indicator"
        android:layout_width="@dimen/_5sdp"
        android:layout_height="0dp"
        android:background="@drawable/text_size_indicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/inputNote"
        app:layout_constraintBottom_toBottomOf="@id/inputNote"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginLeft="@dimen/_12sdp"
        android:importantForAutofill="yes"
        />

    <EditText
        android:id="@+id/inputNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginLeft="@dimen/_7sdp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:autofillHints="@string/type_your_note_here"
        android:background="@null"
        android:fontFamily="sans-serif-light"
        android:gravity="top"
        android:hint="@string/type_your_note_here"
        android:includeFontPadding="false"
        android:inputType="textMultiLine"
        android:minHeight="@dimen/_50sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/indicator"
        app:layout_constraintTop_toBottomOf="@id/layoutWebUrl" />


</androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include layout="@layout/layout_of_color_picker"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>